# project1_mvc

./: CMakeLists.txt  Makefile  glog_env.sh  readme.txt
include/: MatrixMath.hpp  align.h  math.h  math.hpp  matrix.h  matrix.hpp
src/: AppController.cpp  AppController.hpp  AppModel.cpp  AppModel.hpp  CMakeLists.txt  Cli.cpp  Cli.hpp  MatrixMath.cpp  MyMatrix.cpp  MyMatrix.hpp  SubViews.cpp  SubViews.hpp  Ui.cpp  Ui.hpp  align.cpp  align.hpp  controller.cpp  controller.hpp  io.hpp  main.cpp  math.cpp  matrix.cpp  matrix.hpp  model.cpp  model.hpp  view.cpp  view.hpp
src/core/: MatrixMath.cpp  MatrixMath.hpp  align.cpp  align.hpp  io.cpp  io.hpp  main.cpp  matrix_example.cpp
task/prac/PluginsExample1/src/API/: API.h
task/prac/PluginsExample1/src/Plugin1/: main.cpp
task/prac/PluginsExample1/src/Plugin2/: Plugin2.vcxproj  Plugin2.vcxproj.filters  main.cpp
task/prac/PluginsExample1/src/PluginsExample1/: PluginsExample1.vcxproj  main.cpp
task/prac/PluginsExample2/src/: PluginsExample2.sln
task/prac/PluginsExample2/src/API/: API.h
task/prac/PluginsExample2/src/Plugin1/: Plugin1.vcxproj  main.cpp
task/prac/PluginsExample2/src/Plugin2/: main.cpp
task/prac/PluginsExample2/src/PluginsExample1/: PluginsExample1.vcxproj  PluginsExample1.vcxproj.filters  main.cpp
